# gst-torch

./: .gitignore  Cargo.toml  README.md  build.sh  test.sh  test_dashboard_file.sh  test_dashboard_preview.sh  test_dashboard_webcam.sh  test_facepose_preview.sh  test_facepose_webcam.sh  test_monodepth_ndi.sh  test_monodepth_preview.sh  test_monodepth_webcam.sh  test_motiontransfer_file.sh  test_motiontransfer_preview.sh  test_motiontransfer_webcam.sh  test_obs.sh  test_salientobject_preview.sh  test_semseg_preview.sh  test_semseg_webcam.sh
assets/: emilia-driver.mkv  ili.mkv  jordan.mkv  lalaland.mkv  sample-02.mkv  sample-03.mkv
assets/shaders/: facedepth.frag  facedepth.frag.spv  facelandmark.frag  facelandmark.frag.spv  faceskin.vert  faceskin.vert.spv
gst-plugin-version-helper/: Cargo.toml
models/facepose/: param.mean.npy  param.std.npy  param.tri.npy  param.u.npy  param.u_base.npy  param.w_exp.npy  param.w_exp_base.npy  param.w_shp.npy  param.w_shp_base.npy  prediction.pt  test.param.alpha_exp.npy  test.param.alpha_shp.npy  test.param.npy  test.param.offset.npy  test.param.p.npy  test.param.vertex.68pts.npy  test.param.vertex.dense.npy
models/monodepth/: decoder.pt  encoder.pt
models/motiontransfer/: detector.pt  generator.pt
models/salientobject/: model.pt
models/semseg/: semseg.pt
src/: caps.rs  cata.rs  facepose.rs  identity.rs  launch.rs  lib.rs  monodepth.rs  motiontransfer.rs  registry.rs  salientobject.rs  semseg.rs  zipper.rs
src/render/: mod.rs
src/render/facepose/: landmarks.rs  mod.rs  morph.rs
tools/: davinci.sh  video_cut.sh  video_gif.sh  video_h264.sh  video_scale.sh
