[package]
name = "simbotic-torch"
version = "0.1.0"
authors = ["Alex Rozgo <alex.rozgo@gmail.com>"]
repository = "https://github.com/rozgo/gst-torch.git"
license = "MIT/Apache-2.0"
edition = "2018"
description = "Torch GStreamer Plugin"

[dependencies]
clap = "2.33"
rand = "0.7"
glib = { git = "https://github.com/gtk-rs/glib", features = [] }
gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = [] }
gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = [] }
gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gstreamer-audio = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
byte-slice-cast = "0.3"
tch = "0.7.2"
num-traits = "0.2"
lazy_static = "1.4"
byteorder = "1.3.2"
wgpu = {git = "https://github.com/gfx-rs/wgpu-rs.git", rev = "4cc94fe58e025c4f7e5ef84b461bc7d7636a6ec1"}
cgmath = "0.17.0"
futures = "0.3"
tri-mesh = "0.5.0"
libc = "0.2.76"

[lib]
name = "simbotictorch"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "simbotic-stream"
path = "src/launch.rs"

[build-dependencies]
gst-plugin-version-helper = { path="./gst-plugin-version-helper" }

